--- a/slate-web/package.json
+++ b/slate-web/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
+    "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
@@ -25,6 +26,7 @@
     "@tiptap/extension-code-block": "^2.13.0",
     "@tiptap/extension-code-block-lowlight": "^2.13.0",
     "@tiptap/extension-dropcursor": "^2.13.0",
+    "@tiptap/extension-link": "^2.13.0",
     "@tiptap/extension-placeholder": "^2.13.0",
     "@tiptap/pm": "^2.12.0",
     "@tiptap/react": "^2.12.0",
