chore: fixed docker config

--- a/slate-backend/Dockerfile
+++ b/slate-backend/Dockerfile
@@ -4,20 +4,25 @@ WORKDIR /app
 
 ENV GOTOOLCHAIN=auto
 
-# Copy go mod and sum files
+# Add necessary build tools
+RUN apk add --no-cache git
+
+# Copy go mod files
 COPY go.mod go.sum ./
 
-# Download all dependencies
+# Download dependencies
 RUN go mod download
 
 # Copy the source code
 COPY . .
 
-# Build the application
-RUN go build -o /app/main ./cmd/server
+# Build with explicit output path and verify
+RUN go build -o main ./cmd/server && \
+    ls -la main && \
+    chmod +x main
 
-# Expose port 8080
+# Expose port
 EXPOSE 8080
 
-# Command to run the executable
-CMD ["/app/main"]
+# Use relative path for CMD
+CMD ["./main"]
