--- a/slate-backend/docker-compose.yml
+++ b/slate-backend/docker-compose.yml
@@ -3,6 +3,7 @@ version: "3.8"
 services:
   slate-backend:
     build:
+      context: .
       dockerfile: Dockerfile
     container_name: slate-api
     ports:
@@ -10,9 +11,8 @@ services:
     environment:
       - PORT=8080
     volumes:
-      - ./slate-backend:/app
-      # If you have a data directory for persistent storage
-      - slate-data:/app/data
+      # Remove the app volume mount as it conflicts with the container
+      - slate-data:/data
     networks:
       slate-network:
         aliases:
