--- a/slate-backend/air.toml
+++ b/slate-backend/air.toml
@@ -1,20 +1,27 @@
-# .air.toml
+root = "."
+tmp_dir = "tmp"
 
 [build]
-  cmd = "go build -o tmp/main ./cmd/server"
-  bin = "tmp/main"
-  full_bin = ""
-  delay = 1000 # ms
-  exclude_dir = ["tmp", "vendor", "node_modules"]
-  include_ext = ["go", "tpl", "tmpl", "html"]
-  exclude_ext = ["swp", "tmp"]
-  log = "air_errors.log"
+cmd = "go build -o ./tmp/main ./cmd/server"
+bin = "./tmp/main"
+full_bin = "./tmp/main"
+include_ext = ["go"]
+exclude_dir = ["tmp", "vendor", "frontend"]
+include_dir = []
+exclude_file = []
+log = "air.log"
+# Reduced delay from 1000ms to 100ms for faster reloading
+delay = 100
+stop_on_error = true
+send_interrupt = false
+kill_delay = 500
 
 [log]
-  time = true
+time = true
 
-[color]
-  main = "yellow"
-  watcher = "cyan"
-  build = "green"
-  runner = "magenta"
+# Add these sections for better performance
+[screen]
+clear_on_rebuild = true
+
+[misc]
+clean_on_exit = true
