--- a/slate-backend/docker-compose.yml
+++ b/slate-backend/docker-compose.yml
@@ -7,13 +7,18 @@ services:
       dockerfile: Dockerfile
     container_name: slate-api
     ports:
-      - "8080:8080"
+      - "80:8080"
+    env_file:
+      - .env
     environment:
       - PORT=8080
       - DB_PATH=/data/slate.db
+      - HOST=0.0.0.0
     volumes:
       # Remove the app volume mount as it conflicts with the container
+      - .:/app
       - slate-data:/data
+      - go-modules:/go/pkg/mod
     networks:
       slate-network:
         aliases:
@@ -27,3 +32,4 @@ networks:
 volumes:
   slate-data:
     driver: local
+  go-modules:
